fix nowrap

--- a/css/layout/home.css
+++ b/css/layout/home.css
@@ -40,6 +40,9 @@
     background-color: #ff7ff7;
     line-height: 40px;
     color: #FEE7E5;
+    transition: 0.2s;
+    text-overflow: ellipsis;
+    white-space: nowrap;
 }
 
 .filter-item.active{
@@ -50,6 +53,7 @@
     cursor: pointer;
     transform: scale(1.09);
     box-shadow: 0px 0px 4px 4px rgba(0, 0, 0, 0.25);
+    transition: 0.2s;
 }
 
 .item-item{
